<resources>
    <string name="app_name">Meal Bell</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Meal Bell</string>
    <string name="nav_header_subtitle">contact@mealbell.ca</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- menu items -->
    <string name="menu_home">Random Recipes</string>
    <string name="menu_search">Search Recipes</string>
    <string name="menu_meal_planner">Meal Planner</string>
    <string name="menu_bmi">BMI</string>
    <string name="menu_favourite_recipes">Favourite Recipes</string>


    <!-- fragments -->
    <string name="search_by_ingredients_title">Search By Ingredients</string>
    <string name="search_by_nutrition_title">Search By Nutrition</string>
    <string name="create_meal_plan">Create Meal Plan</string>
    <string name="favourite_recipes">Favourite Recipes</string>
    <string name="settings">Settings</string>


    <!-- diets -->
    <string name="diet_gluten_free">Gluten Free</string>
    <string name="diet_vegan">Vegan</string>
    <string name="diet_vegetarian">Vegetarian</string>
    <string name="diet_lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="diet_ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="diet_ketogenic">Ketogenic</string>
    <string name="diet_pescetarian">Pescetarian</string>
    <string name="diet_paleo">Paleo</string>
    <string name="diet_primal">Primal</string>


    <!-- Testing Purposes -->
    <string name="menu_recipes_results">Recipes Results</string>


    <!-- Credit -->
    <string name="credit_developers">Developed by <a href="https://github.com/alidali96/">Ali Dali</a> and <a href="https://github.com/FFindakly/">Fadi Findakly</a></string>
    <string name="credit_icons">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></string>
    <string name="credit_food_api">Recipes results from <a href="https://spoonacular.com/">Food API</a></string>
    <string name="credit_volley_gson">API Requests using <a href="https://developer.android.com/training/volley">Volley</a> and <a href="https://github.com/google/gson">Gson</a></string>
    <string name="credit_picasso">Previewing Images <a href="https://square.github.io/picasso/">Picasso</a></string>
    <string name="credit_flex_box">Custom Layout <a href="https://github.com/google/flexbox-layout/">FlexboxLayout</a></string>
    <string name="credit_folding_cell">Folding Cell <a href="https://github.com/Ramotion/folding-cell-android/">Ramotion</a></string>
    <string name="credit_android_slidr">Custom Slider <a href="https://github.com/florent37/android-slidr/">Android-Slidr</a></string>
    <string name="credit_android_toggle_switch">Custom Toggle Switch <a href="https://github.com/BelkaLab/Android-Toggle-Switch/">Android-Toggle-Switch</a></string>
    <string name="credit_view_pager_animation">View Pager Animations <a href="https://github.com/kungfucat/ViewPagerTransformerLibrary/">ViewPagerTransformerLibrary</a></string>
    <string name="credit_custom_tab_support">Custom Tabs Support Library <a href="https://developer.android.com/topic/libraries/support-library/packages/">Design Support Library</a></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    BMI-->
    <string name="bmi_title_textview">Based on the data you have entered:</string>

    <!--    Styles  -->
    <string name="font_family">serif</string>

</resources>
