<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/confused"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_serach_recipes"
            android:icon="@drawable/search"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/nav_favourite_recipes"
            android:icon="@drawable/heart"
            android:title="@string/menu_favourite_recipes" />

        <item
            android:id="@+id/nav_meal_planner"
            android:icon="@drawable/diet"
            android:title="@string/menu_meal_planner" />

        <item
            android:id="@+id/nav_bmi_fragment"
            android:icon="@drawable/bmi"
            android:title="@string/menu_bmi" />
    </group>

</menu>
