<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/searchRecipesByIngredients">


    <fragment
        android:id="@+id/nav_home"
        android:name="ca.mealbell.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_result_recipes"
        android:name="ca.mealbell.ui.RecipesResultsFragment"
        android:label="@string/menu_recipes_results"
        tools:layout="@layout/fragment_recipes_results" />
    <fragment
        android:id="@+id/searchRecipesByIngredients"
        android:name="ca.mealbell.ui.SearchByIngredientsFragment"
        android:label="@string/search_by_ingredients_title"
        tools:layout="@layout/fragment_search_by_ingredients">
        <action
            android:id="@+id/action_searchRecipesByIngredients_to_nav_result_recipes"
            app:destination="@id/nav_result_recipes" />
    </fragment>
    >>>>>>> Ingredients
</navigation>